# flask-supabase-starter

./: .env.example  .gitignore  README.md
api/: .env.example  pyproject.toml
api/app/: __init__.py
api/app/config/: config.py  db.py  logger.py  supabase.py
api/app/models/: __init__.py  account.py  user.py
api/app/routes/: __init__.py  account.py  auth.py
api/app/services/: account.py  auth.py
api/app/utils/: constants.py  decorators.py  exceptions.py  jwt.py
api/tests/integration/: conftest.py
api/tests/integration/routes/: test_auth.py
api/tests/unit/services/: test_auth.py
supabase/: config.toml
supabase/migrations/: 20250701005814_account_schema.sql  20250703091554_changed_account_username_to_name.sql
supabase/schemas/: account.sql
